<resources>
    <string name="app_name">superapp</string>
    <string name="main_activity_title">Посчитать ИМТ</string>
    <string name="main_activity_enter_ur_high">Введите свой рост</string>
    <string name="main_activity_enter_ur_weight">Введите свой вес</string>
    <string name="main_activity_enter_ur_name">Введите своё имя</string>
    <string name="main_activity_ok_button">Рассчитать ИМТ</string>
    <string name="result_activity_imt_title">Ваш ИМТ</string>
    <string name="back_button">Назад</string>
    <string name="exception_empty_input">Введите число!</string>
    <string name="strong_deficite">Сильный дефицит массы тела, срочно обратитесь к врачу</string>
    <string name="deficite">Сильный дефицит массы тела, рекомендуется диета</string>
    <string name="normal">Нормальная масса тела, рекомендуется регулярные занятия спортом</string>
    <string name="oversize">Предожирение, рекомендуется диета и занятия спортом</string>
    <string name="fat">Ожирение первой степени, обратитесь к врачу, рекомендуется диета и занятия спортом</string>
    <string name="too_fat">Ожирение второй степени, обратитесь к врачу, рекомендуется диета и занятия спортом</string>
    <string name="super_fat">Ожирение третьей степени, вы вообще передвигаетесь?</string>
    <string name="result_table">Таблица результатов</string>
    <string name="activity_result_save_button">Сохранить</string>
    <string name="activity_table_table_header">Таблица результатов</string>
    <string name="activity_table_cell_name">Имя</string>
    <string name="activity_table_cell_high">Рост</string>
    <string name="activity_table_cell_weigh">Вес</string>
    <string name="activity_table_cell_imt">ИМТ</string>
    <string name="activity_table_clear_button">Очистить</string>
</resources>