<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/main_activity_enter_ur_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_activity_enter_ur_high"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_title"
        app:layout_constraintVertical_bias="0.07999998" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/main_activity_enter_ur_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_activity_enter_ur_weight"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_title"
        app:layout_constraintVertical_bias="0.22" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/activity_result_enter_ur_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/main_activity_enter_ur_name"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_title"
        app:layout_constraintVertical_bias="0.357" />

    <Button
        android:id="@+id/main_activity_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_button"
        android:fontFamily="sans-serif-light"
        android:text="@string/main_activity_ok_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58000004" />
</androidx.constraintlayout.widget.ConstraintLayout>